# a3_opencv

./: CMakeLists.txt  README.md  billboard-hack-1.py  main.cpp  pix_compare.py
